# hcmus-master-nlp

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: mapping.toml
dataset/: Chư Phiên Chí - 諸蕃志_full.txt  README.md  Đông Quan Hán Ký - 東觀漢記_(四庫全書本)_full.txt  北史_full.txt  北齊書_full.txt  後漢書_full.txt  漢書_full.txt  舊五代史_full.txt
docs/: annotation-guideline.md  data-cleaning.md  external-sources.md  references.md  report.tex  uv-setup.md
scripts/: __init__.py  _bootstrap.py  annotate_corpus.py  build_kb.py  compliance_check.py  create_gold_pilot.py  doccano_io.py  evaluate.py  export_submission.py  prepare_corpus.py  snapshot_regex_baseline.py  validate_corpus.py  visualize_samples.py
src/hcmus_nlp/: __init__.py  _weights.py  candidates.py  cleaning.py  doccano_io.py  eval.py  gold.py  labels.py  sentence.py  source_base.py  validation.py  volume.py
src/hcmus_nlp/kb/: __init__.py  cbdb.py  chgis.py  manifest.py  seed.py
src/hcmus_nlp/sources/: __init__.py  regex_source.py
tests/: conftest.py  test_candidates.py  test_cleaning.py  test_compliance.py  test_doccano.py  test_eval.py  test_final_export_e2e.py  test_gold.py  test_kb.py  test_labels.py  test_smoke.py  test_volume.py
tests/fixtures/regex_baseline/: sample_paragraph.ner.json
